--- a/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.html
+++ b/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.html
@@ -5,7 +5,7 @@
         <span *ngIf="column === 'image'"></span>
         <span *ngIf="column !== 'image'">{{fmtCol(column) | titlecase}} </span>
       </th>
-      <td mat-cell *matCellDef="let element;">
+      <td mat-cell *matCellDef="let element;" [ngClass]="{'selected-row': true}">
         <img *ngIf="column === 'image'" [src]="imgPath + element[column]" />
         <span *ngIf="column === 'service_type'">
           <p-chip [label]="element[column]"
