--- a/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.html
+++ b/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.html
@@ -31,8 +31,8 @@
 
             <div fxFlex="135px" class="actions-btns" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
               <span class="p-buttonset" styleClass="p-button-sm">
-                <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Done" pButton pRipple class="btn-done" icon="pi pi-check"></button>
-                <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Decline" pButton pRipple class="btn-remove" icon="pi pi-times"></button>
+                <button styleClass="p-button-sm" tooltipPosition="left" pTooltip="Done" pButton pRipple class="btn-done success" icon="pi pi-check"></button>
+                <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Decline" pButton pRipple class="btn-remove default" icon="pi pi-times-circle"></button>
               </span>
             </div>
           </div>
