--- a/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-requests-table/dashboard-requests-table.component.scss
@@ -45,7 +45,7 @@ table {
 }
 :host ::ng-deep {
   .p-button {
-    padding: 5px 10px;
+    padding: 10px;
     font-size: 12px;
   }
   .p-button.p-button-rounded {
