--- a/src/app/shared/components/cma-select-option/cma-select-option.component.scss
+++ b/src/app/shared/components/cma-select-option/cma-select-option.component.scss
@@ -5,8 +5,8 @@
     box-shadow: 0 0 0 0.2rem #c3eacd !important;
   }
   .p-selectbutton .p-button.p-highlight {
-    background: $color-green;
-    border-color: $color-green;
+    background: $color-gray-blue;
+    border-color: $color-gray-blue;
     color: $color-white;
   }
 }
