--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.scss
@@ -110,7 +110,7 @@ img {
   } 
   
   .p-button {
-    padding: 5px 10px;
+    padding: 10px;
     font-size: 12px;
   }
   .p-button.p-button-rounded {
