--- a/src/styleguide/atoms/button.scss
+++ b/src/styleguide/atoms/button.scss
@@ -3,29 +3,37 @@
   border: thin solid $color-gray-blue;
   max-height: 35px;
   font-size: 14px;
-  &:enabled:hover {
-    background: $color-gray-blue;
-    border: thin solid $color-gray-blue;
-    opacity: 0.9;
+  &.primary {
+    &:hover {
+      background: $color-gray-blue;
+      border: thin solid $color-gray-blue;
+    }
   }
-}
-.btn-edit, .btn-done {
-  background-color: $color-gray-3;
-  border-color:  $color-gray-3;
-  color: $color-black-0;
-  &:hover {
-    background-color: $color-gray-2;
-    border-color:  $color-gray-2;
+  &.default {
+    background-color: $color-gray-3;
+    border-color:  $color-gray-3;
     color: $color-black-0;
+    &:hover {
+      background-color: $color-gray-3;
+      border-color:  $color-gray-3;
+      color: $color-black-0;
+    }
   }
-}
-.btn-remove {
-  background-color: $color-red-1;
-  border-color: $color-red-1;
-  &:hover {
-    background-color: $color-red;
-    border-color: $color-red;
-    opacity: 0.9;
+  &.danger {
+    background-color: $color-red-1;
+    border-color: $color-red-1;
+    &:hover {
+      background-color: $color-red;
+      border-color: $color-red;
+    }
+  }
+  &.success {
+    background-color: $color-green;
+    border-color: $color-green;
+    &:hover {
+      background-color: $color-green;
+      border-color: $color-green;
+    }
   }
 }
 .p-button:disabled {
