--- a/src/styleguide/atoms/input.scss
+++ b/src/styleguide/atoms/input.scss
@@ -6,3 +6,6 @@
   margin-top: -.3rem;
   font-size: 14px;
 }
+.p-float-label input:focus ~ label, .p-float-label input.p-filled ~ label, .p-float-label textarea:focus ~ label, .p-float-label textarea.p-filled ~ label, .p-float-label .p-inputwrapper-focus ~ label, .p-float-label .p-inputwrapper-filled ~ label {
+  top: -.65rem !important;
+}
