--- a/src/app/modules/dashboard/components/dashboard-onboarding-detail/dashboard-onboarding-detail.component.html
+++ b/src/app/modules/dashboard/components/dashboard-onboarding-detail/dashboard-onboarding-detail.component.html
@@ -15,7 +15,7 @@
             <img [src]="svgPath + 'upload.svg'" />
             <span>Drag file to upload</span>
           </div>
-          <span>{{ document?.label }}</span>
+          <span></span>
         </div>
       </div>
       <div fxFlex>
