--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <button pButton pRipple type="button" routerLink="/on-boarding/detail" label="Previous" class="p-button-rounded p-button-secondary"></button>
-    <button pButton pRipple type="button" routerLink="/on-boarding/review" label="Next" class="p-button-rounded"></button>
+    <button pButton pRipple type="button" routerLink="/on-boarding/detail" label="Previous" class="p-button-rounded default"></button>
+    <button pButton pRipple type="button" routerLink="/on-boarding/review" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
