--- a/src/app/modules/on-boarding/components/on-boarding-detail/on-boarding-detail.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-detail/on-boarding-detail.component.html
@@ -64,7 +64,7 @@
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-    <button pButton pRipple type="button" routerLink="/on-boarding/type" label="Previous" class="p-button-rounded p-button-secondary"></button>
-    <button pButton pRipple type="button" routerLink="/on-boarding/upload" label="Next" class="p-button-rounded"></button>
+    <button pButton pRipple type="button" routerLink="/on-boarding/type" label="Previous" class="p-button-rounded default"></button>
+    <button pButton pRipple type="button" routerLink="/on-boarding/upload" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
