--- a/src/styleguide/atoms/button.scss
+++ b/src/styleguide/atoms/button.scss
@@ -3,6 +3,10 @@
   border: thin solid $color-gray-blue;
   max-height: 35px;
   font-size: 14px;
+  &:hover {
+    background: $color-gray-blue;
+    border: thin solid $color-gray-blue;
+  }
   &.primary {
     &:hover {
       background: $color-gray-blue;
