--- a/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
@@ -19,7 +19,7 @@
       <div class="pi-thumb" fxLayout="row" fxLayoutAlign="start center" fxFlex>
         <div fxFlex="150px" class="upload-thumb" fxLayout="row" fxLayoutAlign="start start" tooltipPosition="left" pTooltip="Upload Picture">
           <div>
-            <img [src]="svgPath + 'upload.svg'" />
+            <img [src]="svgPath + '24x24/upload.svg'" />
             <span>Drag file to upload</span>
           </div>
         </div>
