--- a/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
@@ -8,7 +8,7 @@
         <p-checkbox #indivCheck name="groupname" readonly value="1" binary="true" [(ngModel)]="selectedTypeIsIndividual" fxLayoutAlign="end center"></p-checkbox>
         <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <div class="thumbnail">
-            <img [src]="svgPath + 'individual.svg'" />
+            <img [src]="svgPath + '24x24/individual.svg'" />
           </div>
           <div class="caption">Individual</div>
         </div>
@@ -18,7 +18,7 @@
         <p-checkbox #corpCheck name="groupname" readonly value="2" binary="true" [(ngModel)]="selectedTypeICorporate" fxLayoutAlign="end center"></p-checkbox>
         <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
           <div class="thumbnail">
-            <img [src]="svgPath + 'corporate.svg'" />
+            <img [src]="svgPath + '24x24/corporate.svg'" />
           </div>
           <div class="caption">Corporate</div>
         </div>
