--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="login-container" fxLayoutGap="20px">
   <mat-card>
-    <img [src]="svgPath + 'login.svg'" />
+    <img [src]="svgPath + '24x24/login.svg'" />
     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
       <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
         <div class="p-float-label">
