--- a/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.html
@@ -1,32 +1,34 @@
-<mat-accordion>
-  <mat-expansion-panel *ngFor="let boarder of homeowners; let i = index" [expanded]="i === 0">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-          <img [src]="imgPath + 'sample-profile-pic.png'" />
-          <span class="name">{{ boarder?.name }}</span>
+<div class="page-container" [ngClass]="{'active': active}">
+  <mat-accordion>
+    <mat-expansion-panel *ngFor="let boarder of homeowners; let i = index" [expanded]="i === 0">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <img [src]="imgPath + 'sample-profile-pic.png'" />
+            <span class="name">{{ boarder?.name }}</span>
+          </div>
+        </mat-panel-title>
+        <mat-panel-description>
+          <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
+            <p-chip [pTooltip]="boarder?.status + ' Date: 10/10/2012 4:15:00 AM'" tooltipPosition="top" [label]="boarder?.status" [ngClass]="('chip-' + boarder?.status) | lowercase"></p-chip>
+          </div>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <div class="noselect" fxLayout="row" fxLayoutAlign="start start">
+        <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
+          <mat-tab-group>
+            <mat-tab label="Personal Information">
+              <cma-dashboard-homeowners-info></cma-dashboard-homeowners-info>
+            </mat-tab>
+            <mat-tab label="Documents">
+              <cma-dashboard-homeowners-document></cma-dashboard-homeowners-document>
+            </mat-tab>
+            <mat-tab label="Payments">
+            </mat-tab>
+          </mat-tab-group>
         </div>
-      </mat-panel-title>
-      <mat-panel-description>
-        <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
-          <p-chip [pTooltip]="boarder?.status + ' Date: 10/10/2012 4:15:00 AM'" tooltipPosition="top" [label]="boarder?.status" [ngClass]="('chip-' + boarder?.status) | lowercase"></p-chip>
-        </div>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <div class="noselect" fxLayout="row" fxLayoutAlign="start start">
-      <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
-        <mat-tab-group>
-          <mat-tab label="Personal Information">
-            <cma-dashboard-homeowners-info></cma-dashboard-homeowners-info>
-          </mat-tab>
-          <mat-tab label="Documents">
-            <cma-dashboard-homeowners-document></cma-dashboard-homeowners-document>
-          </mat-tab>
-          <mat-tab label="Payments">
-          </mat-tab>
-        </mat-tab-group>
+        <div></div>
       </div>
-      <div></div>
-    </div>
-  </mat-expansion-panel>
-</mat-accordion>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
