--- a/src/app/modules/dashboard/components/dashboard-onboarding-detail/dashboard-onboarding-detail.component.html
+++ b/src/app/modules/dashboard/components/dashboard-onboarding-detail/dashboard-onboarding-detail.component.html
@@ -12,7 +12,7 @@
       <div fxFlex="120px">
         <div class="upload-thumb" tooltipPosition="left" pTooltip="Upload Picture">
           <div>
-            <img [src]="svgPath + 'upload.svg'" />
+            <img [src]="svgPath + '24x24/upload.svg'" />
             <span>Drag file to upload</span>
           </div>
           <span></span>
@@ -91,7 +91,7 @@
       <div fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutGap="20px">
         <div *ngFor="let document of uploadDocuments" class="upload-thumb">
           <div>
-            <img [src]="svgPath + 'upload.svg'" />
+            <img [src]="svgPath + '24x24/upload.svg'" />
             <span>Drag file to upload</span>
           </div>
           <span>{{ document?.label }}</span>
