--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
@@ -5,7 +5,7 @@
     <div fxLayout="row wrap" fxLayoutAlign="center start" fxLayoutGap="20px" >
       <div *ngFor="let document of uploadDocuments" class="upload-thumb">
         <div>
-          <img [src]="svgPath + 'upload.svg'" />
+          <img [src]="svgPath + '24x24/upload.svg'" />
           <span>Drag file to upload</span>
         </div>
         <span>{{ document?.label }}</span>
