--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -66,7 +66,7 @@
     <!-- documents -->
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="5px">
       <div *ngFor="let document of uploadDocuments" pTooltip="Download" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
-        <img [src]="svgPath + 'word.svg'" />
+        <img [src]="svgPath + '24x24/word.svg'" />
         <span>{{ document?.label }}</span>
       </div>
     </div>
